@@ -648,6 +648,8 @@ TrayWindow.menu.stopalldownloads=Stop &All Downloads
 ConfigView.section.tracker.sslport.info=See the FAQ for further information
 wizard.tracker.ssl=Use SSL
 ConfigView.label.playdownloadfinished=Play a sound when a download is finished
+ConfigView.label.popupdownloadfinished=Popup an alert when a download is finished
+ConfigView.label.popupfilefinished=Popup an alert when a file is finished
 MyTorrentsView.pieces=Pieces
 MyTorrentsView.pieces.info=Graphical bar representing which pieces you have downloaded
 MyTorrentsView.completion=Completion
@@ -1880,6 +1882,9 @@ popup.more.waiting=%1 more message(s)..
 
 popup.next=>
 popup.previous=< (%1)
+
+popup.download.finished="%1" has finished downloading.
+popup.file.finished="%1" has finished downloading.
 
 ConfigView.auto=Auto
 
